// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WizardShell characterization — embedded markup embedded markup under platform chrome (hideTitle) is unchanged 1`] = `
<div
  aria-label="Aria"
  class="___q3kd5n0_0000000 f22iagw f1vx9l62 fly5x3f f1l02sjl f1a3p1vp fxugw4r"
>
  <div
    class="___13ig8vy_0000000 f22iagw f1g2tzg5 f1a3p1vp"
  >
    <nav
      aria-label="Wizard steps"
      class="___12nn9d6_0000000 f22iagw f1vx9l62 fbc6vix f45u8dm fi64zpg f8ivn9s f1isyly7 fhx4nu fw5db7e f1dmdbja f5tn483 fcdblym f7pw515 f1ewtqcl"
    >
      <span
        aria-hidden="true"
        class="fui-Text ___fuajhq0_j6yex40 fk6fouc f13mqy1h fcpl73t fl43uef fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn f18zxyen f1u78bsq f1wm8e14"
      >
        Steps
      </span>
      <ol
        aria-label="Step list"
        class="___1kx9yqw_0000000 fm4rflg f1pnz6pm f1c5fvqg f22iagw f1vx9l62 fbc6vix"
      >
        <li
          aria-current="step"
          class="___xx51yu0_0000000 f22iagw f1vx9l62 f10pi13n"
          role="listitem"
        >
          <div
            class="___wnvboc0_0000000 f22iagw f122n59 faqewft f1kwiid1 f5b47ha"
          >
            <span
              aria-hidden="true"
              class="___heek1e0_0000000 f6zmzpu f50nw0v f5q2cvs f18zi460 f1wpluaz fmklw6v fsfsuhs fzkkow9 fcdblym fg706s2 fjik90z f1c6jg8l f6z23yc f17aye20 f1u8pn5z f3rmtva fi64zpg f22iagw f122n59 f4d9j23"
            >
              <span
                class="___1hu08kk_0000000 f1o3cbw4 f1x82gua f5q2cvs flo9id0"
              />
            </span>
            <span
              aria-label="Step a, active"
              class="fui-Text ___1m16ofu_1wh8liz fk6fouc fy9rknc f1srzq5n fhuq1gn fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f19n0e5"
            >
              Step a
            </span>
          </div>
          <span
            aria-hidden="true"
            class="___vrz87p0_0000000 f1euv43f f1vpap1a f1gak3hv f5gq2j6 f1u4ofkn fn4h89p"
          />
        </li>
        <li
          class="___xx51yu0_0000000 f22iagw f1vx9l62 f10pi13n"
          role="listitem"
        >
          <div
            class="___wnvboc0_0000000 f22iagw f122n59 faqewft f1kwiid1 f5b47ha"
          >
            <span
              aria-hidden="true"
              class="___1qsmo2y_0000000 f6zmzpu f50nw0v f5q2cvs f18zi460 f1wpluaz fmklw6v fsfsuhs fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh f3rmtva fi64zpg f22iagw f122n59 f4d9j23"
            />
            <span
              aria-label="Step b, pending"
              class="fui-Text ___1onsc7v_es2u850 fk6fouc fy9rknc f1srzq5n figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn"
            >
              Step b
            </span>
          </div>
          <span
            aria-hidden="true"
            class="___vrz87p0_0000000 f1euv43f f1vpap1a f1gak3hv f5gq2j6 f1u4ofkn fn4h89p"
          />
        </li>
        <li
          class="___xx51yu0_0000000 f22iagw f1vx9l62 f10pi13n"
          role="listitem"
        >
          <div
            class="___wnvboc0_0000000 f22iagw f122n59 faqewft f1kwiid1 f5b47ha"
          >
            <span
              aria-hidden="true"
              class="___1qsmo2y_0000000 f6zmzpu f50nw0v f5q2cvs f18zi460 f1wpluaz fmklw6v fsfsuhs fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh f3rmtva fi64zpg f22iagw f122n59 f4d9j23"
            />
            <span
              aria-label="Step c, pending"
              class="fui-Text ___1onsc7v_es2u850 fk6fouc fy9rknc f1srzq5n figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn"
            >
              Step c
            </span>
          </div>
        </li>
      </ol>
    </nav>
    <div
      class="___1cmrg5z_0000000 f1g2tzg5 f22iagw f1vx9l62 fnknrz3 f5zp4f f8ivn9s fdxej3c ftciz5z fq3vbzb"
    >
      <div>
        content-
        a
      </div>
    </div>
  </div>
  <div
    class="___pxc4ss0_1lk1peh f22iagw f122n59 faqewft f9b8bpc fjshy37 f8be996 fxugw4r fi64zpg f1869bpl"
  >
    <div
      class="___11i0s0y_0000000 f22iagw f122n59 faqewft"
    >
      <button
        class="fui-Button r1f29ykk"
        type="button"
      >
        Cancel
      </button>
    </div>
    <div
      class="___11i0s0y_0000000 f22iagw f122n59 faqewft"
    >
      <button
        class="fui-Button r1f29ykk ___dhqv000_ql4wmo0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc f1ksv2xa fhvnf4x fb6swo4 f1klyf7k f232fm2 f1d6mv4x f1nz3ub2 fag2qd2 fmvhcg7 f1o3dhpw f14bpyus fqc85l4 f1h3a8gf fkiggi6 f8gmj8i f1ap8nzx f1igan7k fjag8bx f1v3eptx f1ysmecq faulsx f79t15f fbtzoaq f8qmx7k fd4bjan f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`WizardShell characterization — embedded markup embedded markup with the title bar is unchanged 1`] = `
<div
  aria-label="Test Wizard"
  class="___q3kd5n0_0000000 f22iagw f1vx9l62 fly5x3f f1l02sjl f1a3p1vp fxugw4r"
>
  <div
    class="___i68gpf0_0000000 f22iagw f122n59 f1869bpl fu9asb0 f9b8bpc fjshy37 f1facbz3 fi64zpg"
  >
    <h1
      class="fui-Text ___11tm57h_1d6har5 fk6fouc fod5ikn faaz57k fl43uef fpgzoln f1w7gpdv fz5stix f1a3p1vp f1cmbuwj f1g2tzg5 fy77jfu f19n0e5"
      title="Test Wizard"
    >
      Test Wizard
    </h1>
    <div
      class="___fvcnan0_6d3n2m0 f22iagw f122n59 f18ydsq9 fi64zpg"
    >
      <button
        aria-label="Close"
        class="fui-Button r1f29ykk ___1fjjlsv_l4x5210 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 f1q1yqic fhvnf4x fb6swo4 f1klyf7k f232fm2 fwga7ee f1nhwcv0 f1gm6xmp f1xxsver f1v3eptx fivsta0 fd4bjan f3m6zum f17fgpbq fu97m5z ft85np5 fy9rknc figsok6 fwrc4pm fazmxh f1jt17bm"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___hix1za0_wgffxm0 fe5j1ua fjamq6b f64fuq3 fbaiahx"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="___13ig8vy_0000000 f22iagw f1g2tzg5 f1a3p1vp"
  >
    <nav
      aria-label="Wizard steps"
      class="___12nn9d6_0000000 f22iagw f1vx9l62 fbc6vix f45u8dm fi64zpg f8ivn9s f1isyly7 fhx4nu fw5db7e f1dmdbja f5tn483 fcdblym f7pw515 f1ewtqcl"
    >
      <span
        aria-hidden="true"
        class="fui-Text ___fuajhq0_j6yex40 fk6fouc f13mqy1h fcpl73t fl43uef fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn f18zxyen f1u78bsq f1wm8e14"
      >
        Steps
      </span>
      <ol
        aria-label="Step list"
        class="___1kx9yqw_0000000 fm4rflg f1pnz6pm f1c5fvqg f22iagw f1vx9l62 fbc6vix"
      >
        <li
          class="___xx51yu0_0000000 f22iagw f1vx9l62 f10pi13n"
          role="listitem"
        >
          <div
            class="___wnvboc0_0000000 f22iagw f122n59 faqewft f1kwiid1 f5b47ha"
          >
            <span
              aria-hidden="true"
              class="___147tznf_0000000 f6zmzpu f50nw0v f5q2cvs f1pit55b f1orqat1 f136mcbi ffbvwxd fzkkow9 fcdblym fg706s2 fjik90z f1p3nwhy f11589ue f1q5o8ev f1pdflbu f3rmtva fi64zpg f22iagw f122n59 f4d9j23 f16muhyy"
            >
              <svg
                aria-hidden="true"
                class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                fill="currentColor"
                font-size="22"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16Zm0 1a7 7 0 1 0 0 14 7 7 0 0 0 0-14Zm3.36 4.65c.17.17.2.44.06.63l-.06.07-4 4a.5.5 0 0 1-.64.07l-.07-.06-2-2a.5.5 0 0 1 .63-.77l.07.06L9 11.3l3.65-3.65c.2-.2.51-.2.7 0Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              aria-label="Step a, completed"
              class="fui-Text ___8k2aw90_ah2v280 fk6fouc fy9rknc f1srzq5n figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 fkfq4zb"
            >
              Step a
            </span>
          </div>
          <span
            aria-hidden="true"
            class="___vrz87p0_0000000 f1euv43f f1vpap1a f1gak3hv f5gq2j6 f1u4ofkn fn4h89p"
          />
        </li>
        <li
          aria-current="step"
          class="___xx51yu0_0000000 f22iagw f1vx9l62 f10pi13n"
          role="listitem"
        >
          <div
            class="___wnvboc0_0000000 f22iagw f122n59 faqewft f1kwiid1 f5b47ha"
          >
            <span
              aria-hidden="true"
              class="___heek1e0_0000000 f6zmzpu f50nw0v f5q2cvs f18zi460 f1wpluaz fmklw6v fsfsuhs fzkkow9 fcdblym fg706s2 fjik90z f1c6jg8l f6z23yc f17aye20 f1u8pn5z f3rmtva fi64zpg f22iagw f122n59 f4d9j23"
            >
              <span
                class="___1hu08kk_0000000 f1o3cbw4 f1x82gua f5q2cvs flo9id0"
              />
            </span>
            <span
              aria-label="Step b, active"
              class="fui-Text ___1m16ofu_1wh8liz fk6fouc fy9rknc f1srzq5n fhuq1gn fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f19n0e5"
            >
              Step b
            </span>
          </div>
          <span
            aria-hidden="true"
            class="___vrz87p0_0000000 f1euv43f f1vpap1a f1gak3hv f5gq2j6 f1u4ofkn fn4h89p"
          />
        </li>
        <li
          class="___xx51yu0_0000000 f22iagw f1vx9l62 f10pi13n"
          role="listitem"
        >
          <div
            class="___wnvboc0_0000000 f22iagw f122n59 faqewft f1kwiid1 f5b47ha"
          >
            <span
              aria-hidden="true"
              class="___1qsmo2y_0000000 f6zmzpu f50nw0v f5q2cvs f18zi460 f1wpluaz fmklw6v fsfsuhs fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh f3rmtva fi64zpg f22iagw f122n59 f4d9j23"
            />
            <span
              aria-label="Step c, pending"
              class="fui-Text ___1onsc7v_es2u850 fk6fouc fy9rknc f1srzq5n figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn"
            >
              Step c
            </span>
          </div>
        </li>
      </ol>
    </nav>
    <div
      class="___1cmrg5z_0000000 f1g2tzg5 f22iagw f1vx9l62 fnknrz3 f5zp4f f8ivn9s fdxej3c ftciz5z fq3vbzb"
    >
      <div>
        content-
        b
      </div>
    </div>
  </div>
  <div
    class="___pxc4ss0_1lk1peh f22iagw f122n59 faqewft f9b8bpc fjshy37 f8be996 fxugw4r fi64zpg f1869bpl"
  >
    <div
      class="___11i0s0y_0000000 f22iagw f122n59 faqewft"
    >
      <button
        class="fui-Button r1f29ykk"
        type="button"
      >
        Cancel
      </button>
      <span>
        extra
      </span>
    </div>
    <div
      class="___11i0s0y_0000000 f22iagw f122n59 faqewft"
    >
      <span>
        step-action
      </span>
      <button
        class="fui-Button r1f29ykk ___1936867_1dyyxi7 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fkoldzo fhvnf4x fb6swo4 f1klyf7k f232fm2 f1l983o9 f1nhwcv0 f1gm6xmp fxoo9op f1v3eptx f1i0gk12 fd4bjan"
        type="button"
      >
        Skip
      </button>
      <button
        class="fui-Button r1f29ykk"
        type="button"
      >
        Back
      </button>
      <button
        class="fui-Button r1f29ykk ___dhqv000_ql4wmo0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc f1ksv2xa fhvnf4x fb6swo4 f1klyf7k f232fm2 f1d6mv4x f1nz3ub2 fag2qd2 fmvhcg7 f1o3dhpw f14bpyus fqc85l4 f1h3a8gf fkiggi6 f8gmj8i f1ap8nzx f1igan7k fjag8bx f1v3eptx f1ysmecq faulsx f79t15f fbtzoaq f8qmx7k fd4bjan f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
